docs: 상품 등록 api 문서화 추가 #134
