# api/store/src/main/java/com/backtothefuture/store/controller/ProductController.java
@@ -8,17 +8,23 @@ import com.backtothefuture.domain.response.BfResponse;
 import com.backtothefuture.store.dto.request.ProductRegisterDto;
 import com.backtothefuture.store.dto.request.ProductUpdateDto;
 import com.backtothefuture.store.service.ProductService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import jakarta.validation.Valid;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
@@ -31,10 +37,25 @@ public class ProductController {
 
     // 상품 등록 API
     // TODO: ROLE 을 STORE_OWNER, ADMIN 제한
-    @PostMapping("/stores/{storeId}/products")
+    @Operation(summary = "새로운 상품 등록",
+            description = "특정 가게에 새로운 상품을 등록합니다. 이미지는 'image/png', 'image/jpeg' 형식을 지원합니다.",
+            responses = {
+                    @ApiResponse(responseCode = "201", description = "등록 성공",
+                            content = @Content(schema = @Schema(implementation = BfResponse.class),
+                                    examples = {
+                                            @ExampleObject(name = "success", value = "{\"code\": 201, \"message\": \"정상적으로 생성되었습니다.\", \"data\": {\"product_id\": 1}}")
+                                    }))
+            })
+    @PostMapping(
+            value = "/stores/{storeId}/products",
+            consumes = MediaType.MULTIPART_FORM_DATA_VALUE,
+            produces = MediaType.APPLICATION_JSON_VALUE
+    )
     public ResponseEntity<BfResponse<?>> registerProduct(
             @PathVariable("storeId") Long storeId,
+            @Parameter(description = "요청 정보입니다.")
             @Valid @RequestPart(value = "request") ProductRegisterDto productRegisterDto,
+            @Parameter(description = "상품 이미지로 사용할 이미지를 첨부해 주세요.")
             @RequestPart(value = "file", required = false) MultipartFile thumbnail
     ) {
         return ResponseEntity.status(HttpStatus.CREATED)
